--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-property-decorator": "^8.3.0"
+    "vue-property-decorator": "^8.3.0",
+    "vue-slider-component": "^3.0.43"
   },
   "devDependencies": {
     "@types/jest": "^24.0.11",
