--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "qs": "^6.9.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-slider-component": "^3.0.43"
   },
   "devDependencies": {
+    "@types/core-js": "^2.5.2",
+    "@types/eslint": "^6.1.3",
+    "@types/eslint-plugin-prettier": "^2.2.0",
     "@types/jest": "^24.0.11",
+    "@types/prettier": "^1.19.0",
+    "@types/qs": "^6.9.0",
+    "@types/sass": "^1.16.0",
     "@vue/cli-plugin-babel": "^4.1.1",
     "@vue/cli-plugin-eslint": "^4.1.1",
     "@vue/cli-plugin-typescript": "^4.1.1",
