--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "yarn gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.3.2",
@@ -35,6 +36,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "gh-pages": "^2.1.1",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "sass": "^1.19.0",
