--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,25 +1,20 @@
-name: Test
+name: Test and deploy
 
 on: [push]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
 
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install, build, and test
-      run: |
+    - uses: actions/setup-node@v1
+    - run: |
         yarn install
         yarn test
       env:
         CI: true
+    - if: github.ref == "refs/heads/master"
+      run: |
+        yarn build
+        yarn gh-pages -e "https://$GITHUB_TOKEN@github.com/motemen/kanji-slider.git" -d dist
