--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,5 +18,6 @@ jobs:
       run: |
         git config --global user.email "motemen@gmail.com"
         git config --global user.name  "GitHub Actions"
+        git remote set-url origin "https://${{ secrets.GITHUB_TOKEN }}@github.com/motemen/kanji-slider.git"
         yarn build
-        yarn gh-pages -r "https://${{ secrets.GITHUB_TOKEN }}@github.com/motemen/kanji-slider.git" -d dist
+        yarn gh-pages -d dist
