--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,10 +11,12 @@ jobs:
     - uses: actions/setup-node@v1
     - run: |
         yarn install
+        yarn lint --no-fix
         yarn test
       env:
         CI: true
     - if: github.ref == 'refs/heads/master'
+      name: deploy
       run: |
         git config --global user.email "motemen@gmail.com"
         git config --global user.name  "GitHub Actions"
